# sanchr-backend-oss

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  LICENSE  Makefile  README.md  SECURITY.md  backend-threat-model.md  docker-compose.yml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  pull_request_template.md
.github/DISCUSSION_TEMPLATE/: q-and-a.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  integration_proposal.yml
.github/workflows/: ci.yml  rust-integration-reusable.yml  rust-lint-unit-reusable.yml
config/: default.yaml  nats-server.conf
crates/sanchr-call/: Cargo.toml
crates/sanchr-call/src/: main.rs  signaling.rs  turn.rs
crates/sanchr-common/: Cargo.toml
crates/sanchr-common/src/: call_events.rs  config.rs  errors.rs  lib.rs  timeuuid.rs  types.rs
crates/sanchr-core/: Cargo.toml
crates/sanchr-core/src/: lib.rs  main.rs  server.rs
crates/sanchr-core/src/auth/: challenge.rs  handlers.rs  mod.rs  service.rs
crates/sanchr-core/src/backup/: handlers.rs  service.rs
crates/sanchr-core/src/contacts/: handlers.rs  service.rs
crates/sanchr-core/src/discovery/: cache.rs  handlers.rs  mod.rs  salt_rotation.rs  secret_rotation.rs  service.rs
crates/sanchr-core/src/ekf/: manager.rs  mod.rs  models.rs  notifications.rs
crates/sanchr-core/src/keys/: handlers.rs  service.rs
crates/sanchr-core/src/media/: handlers.rs  service.rs
crates/sanchr-core/src/messaging/: call_bridge.rs  handlers.rs  mod.rs  reaction_handler.rs  relay_bridge.rs  relay_payload.rs  router.rs  sealed_handler.rs  service.rs  stream.rs
crates/sanchr-core/src/middleware/: auth.rs  mod.rs  request_size.rs
crates/sanchr-core/src/notifications/: handlers.rs  service.rs
crates/sanchr-core/src/observability/: grpc_metrics.rs  metrics.rs  mod.rs  tracing_setup.rs
crates/sanchr-core/src/presence/: handlers.rs
crates/sanchr-core/src/privacy/: avatar.rs  mod.rs
crates/sanchr-core/src/push/: mod.rs
crates/sanchr-core/src/settings/: handlers.rs  service.rs
crates/sanchr-core/src/vault/: handlers.rs  service.rs
crates/sanchr-core/tests/: auth_flow.rs  call_bridge_flow.rs  contacts_settings_vault.rs  discovery_flow.rs  keys_flow.rs  media_flow.rs  messaging_flow.rs  oprf_init_flow.rs  privacy_enforcement.rs  reliability_guards.rs  request_otp_flow.rs  retention_properties.rs  vault_flow.rs
crates/sanchr-core/tests/common/: mod.rs
crates/sanchr-db/: Cargo.toml
crates/sanchr-db/src/: lib.rs
crates/sanchr-db/src/migrations/: 001_initial_schema.sql  002_keys.sql  003_conversations.sql  004_contacts.sql  005_backend_remediation.sql  006_device_delivery_outbox.sql  007_backup_metadata.sql  008_full_key_bundles.sql  009_presence_device_state.sql  010_direct_conversations_unique_pairs.sql  011_refresh_tokens.sql  012_rename_sanchr_mode.sql  013_performance_indexes.sql  014_encrypted_profile.sql  015_drop_direct_conversations.sql  016_push_token_rotation.sql  017_registration_lock.sql  018_voip_push_token.sql  019_conversation_device_notification_prefs.sql  020_refresh_token_expiry.sql
crates/sanchr-db/src/postgres/: backups.rs  contacts.rs  conversations.rs  devices.rs  keys.rs  media.rs  mod.rs  pending_registrations.rs  refresh_tokens.rs  settings.rs  users.rs
crates/sanchr-db/src/redis/: call_events.rs  call_state.rs  delivery_tokens.rs  idempotency.rs  mod.rs  privacy_cache.rs  rate_limit.rs  sessions.rs  typing.rs
crates/sanchr-db/src/scylla/: auxiliary.rs  calls.rs  messages.rs  mod.rs  outbox.rs  pending.rs  reactions.rs  receipts.rs  vault.rs
crates/sanchr-proto/: Cargo.toml  build.rs
crates/sanchr-proto/proto/: auth.proto  backup.proto  backup_payload.proto  calling.proto  contacts.proto  discovery.proto  ekf.proto  keys.proto  media.proto  messaging.proto  notifications.proto  sealed_sender.proto  settings.proto  vault.proto
crates/sanchr-proto/src/: lib.rs
crates/sanchr-psi/: Cargo.toml
crates/sanchr-psi/benches/: oprf_bench.rs
crates/sanchr-psi/include/: sanchr_oprf.h
crates/sanchr-psi/src/: bloom.rs  ffi.rs  hkdf_utils.rs  lib.rs  oprf.rs
crates/sanchr-server-crypto/: Cargo.toml
crates/sanchr-server-crypto/benches/: crypto_benchmarks.rs
crates/sanchr-server-crypto/src/: aws_kms_provider.rs  jwt.rs  lib.rs  local_provider.rs  media_keys.rs  otp.rs  password.rs  provider.rs  sealed_sender.rs  turn_creds.rs  vault_provider.rs
deploy/helm/sanchr/: Chart.yaml  values.yaml
deploy/helm/sanchr/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment-call.yaml  deployment-core.yaml  hpa.yaml  networkpolicy.yaml  pdb.yaml  service-call.yaml  service-core.yaml  serviceaccount.yaml
docs/: ROADMAP.md  architecture.md  kms-integration.md  release-process.md  rfc-process.md  scale-testing.md  testing.md
docs/api/: API.md  README.md
docs/proofs/: composition-proof.md
docs/proofs/tamarin/: README.md  ekf_temporal_bounding.spthy  mediak_ratchet_binding.spthy  oprf_obliviousness.spthy
docs/security-audit/: attack-surface.md  audit-scope.md  crypto-inventory.md  engagement-plan.md  known-issues.md  threat-model-consolidated.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_jwt.rs  fuzz_oprf.rs  fuzz_otp.rs  fuzz_proto_decode.rs
loadtests/: auth.js  contacts_settings_vault.js  full_lifecycle.js  keys.js  messaging.js  run.sh
loadtests/lib/: helpers.js
