[package]
name = "sanchr-call"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[[bin]]
name = "sanchr-call"
path = "src/main.rs"

[dependencies]
sanchr-common = { path = "../sanchr-common" }
sanchr-proto = { path = "../sanchr-proto" }
sanchr-server-crypto = { path = "../sanchr-server-crypto" }
sanchr-db = { path = "../sanchr-db" }

tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
async-nats = { workspace = true }
fred = { workspace = true }
scylla = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
tokio-stream = { workspace = true }
sqlx = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
rustls = { workspace = true }
