[package]
name = "sanchr-core"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[lib]
name = "sanchr_core"
path = "src/lib.rs"

[[bin]]
name = "sanchr-core"
path = "src/main.rs"

[dependencies]
sanchr-common = { path = "../sanchr-common" }
sanchr-proto = { path = "../sanchr-proto" }
sanchr-server-crypto = { path = "../sanchr-server-crypto" }
sanchr-db = { path = "../sanchr-db" }
sanchr-psi = { path = "../sanchr-psi" }
curve25519-dalek = { workspace = true }

tokio = { workspace = true }
axum = { workspace = true }
tonic = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
prost = { workspace = true }
sqlx = { workspace = true }
fred = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
tracing-opentelemetry = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
async-nats = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
scylla = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-config = { workspace = true }
aws-credential-types = { workspace = true }
rustls = { workspace = true }
base64 = { workspace = true }
a2 = { workspace = true }
hex = { workspace = true }
arc-swap = { workspace = true }
sha2 = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-nats = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-credential-types = { workspace = true }
sanchr-common = { path = "../sanchr-common" }
sanchr-server-crypto = { path = "../sanchr-server-crypto" }
sanchr-db = { path = "../sanchr-db" }
sanchr-proto = { path = "../sanchr-proto" }
sanchr-psi = { path = "../sanchr-psi" }
hex = { workspace = true }
