[package]
name = "sanchr-proto"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }

[build-dependencies]
tonic-build = "0.14"
tonic-prost-build = "0.14"
