[package]
name = "sanchr-psi"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["lib", "staticlib"]

[dependencies]
curve25519-dalek = { workspace = true }
hkdf = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "oprf_bench"
harness = false
