[package]
name = "sanchr-server-crypto"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
argon2 = { workspace = true }
jsonwebtoken = { workspace = true }
rand = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
hkdf = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
subtle = "2"
ed25519-dalek = { workspace = true }
sanchr-proto = { path = "../sanchr-proto" }
prost = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
